img uploading + fixes
